ajout page sources

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                         Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='pages/TestParEcole.html' title='Les tests acceptés par les écoles'>Les
-                        tests acceptés par les écoles</a>
+                    <a id='TestParEcole' href='pages/TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
+                </li>
+                <li>
+                    <a id='Sources' href='pages/Sources.html' title='Sources'>Les Sources</a>
                 </li>
             </ul>
         </div>
@@ -55,6 +57,7 @@
 </nav>
 <header class="image-bg-fluid-height">
     <h1 class="titre-site">Le guide des grands tests d'Anglais</h1>
+    <h2 class="soustitre-site">Pour vos études à l'étranger</h2>
 </header>
 
 <!-- Content Section -->
@@ -86,10 +89,9 @@
             <hr class="hr"/>
             <div class="col-lg-12">
                 <h1 class="section-heading">Les modalités générales pour passer un test</h1>
-                <p class="lead section-lead">
+                <p class="section-paragraph">
                     Chaque test est constitué pour évaluer 2 capacités : l'oral et l'écrit.
-                    Chacune se divise en deux parties compréhension et expression. Ses capacités reposent sur 4 éléments
-                    :
+                    Chacune se divise en deux parties compréhension et expression. Ses capacités reposent sur 4 éléments :</p>
                 <ol>
                     <li>La compréhension de l'oral avec des questions sur un document audio</li>
                     <li>La compréhension de l'écrit avec des questions sur un document écrit</li>
@@ -98,21 +100,21 @@
                     </li>
                     <li>L'Expression écrite : Une ou plusieurs expression écrite sur un thème donné</li>
                 </ol>
-                L'ensemble de ses compétences donne une note générale qui dépende du test passer. En général un note
+                <p class="section-paragraph">L'ensemble de ses compétences donne une note générale qui dépende du test passer. En général un note
                 global est donnée. Le détail de la notation peut être aussi indiquer avec la note global. Là aussi cela
                 dépend du test passé. L'ensemble des détails des notations est détailler donc chaque page du test
                 passé.</p>
                 <h1 class="section-heading">Pour se préparer</h1>
-                <h2>Si vous avez peu de temps à y consacrer</h2>
-                <p class="lead section-lead">
+                <p class="lead section-lead">Si vous avez peu de temps à y consacrer</p>
+                <p class="section-paragraph">
                     Allez sur internet surfez, baignez-vous dans la langue anglaise, il y a énormément de test et
                     tutoriels sur internet, pour améliorer votre anglais. En général chaque test dispose de leur propre
                     manière de se prépare à leurs examens. Certains disposent même de livre détailler les différentes
                     épreuves et
                     permettant de s'exercer sur des exercices type du test.
                 </p>
-                <h2>Si vous voulez prendre votre temps</h2>
-                <p class="lead section-lead">
+                <p class="lead section-lead">Si vous voulez prendre votre temps</p>
+                <p class="section-paragraph">
                     Si vous avez le temps et un peu l'argent aussi vous pouvez partir, à l'étranger pour apprendre
                     l'anglais tout en découvrant un pays, ex: il y a des formations en Irlande qui proposent à la fin du
                     séjour de vous faire passer le test. Si jamais le fait d'être en
@@ -126,18 +128,6 @@
     </div>
 </section>
 
-
-<section>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="section-heading">Sources</h1>
-                <p class="lead section-lead"><a href="http://www.cambridgeenglish.org/fr/exams/advanced/">http://www.cambridgeenglish.org/fr/exams/advanced/</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</section>
 </body>
 </html>
 
