--- a/pages/IELTS.html
+++ b/pages/IELTS.html
@@ -17,13 +17,6 @@
     <!-- Custom CSS -->
     <link href="../css/full-width-pics.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -60,8 +53,10 @@
                     <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests
-                        acceptés par les écoles</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
+                </li>
+                <li>
+                    <a id='Sources' href='Sources.html' title='Sources'>Les Sources</a>
                 </li>
             </ul>
         </div>
@@ -73,7 +68,8 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <h1 class="titre-site">Le guide des tests d'Anglais</h1>
+    <h1 class="titre-site">Le guide des grands tests d'Anglais</h1>
+    <h2 class="soustitre-site">Pour vos études à l'étranger</h2>
 </header>
 
 <!-- Content Section -->
@@ -102,6 +98,7 @@
             <p class="section-paragraph">Au moment de votre inscription, vous devez lire et accepter les conditions et
                 modalités du test IELTS.<br/>
                 Les conditions et modalités contiennent des informations importantes, notamment sur :
+            </p>
             <ul>
                 <li>les dispositions à prendre le jour du test</li>
                 <li>les objets que vous serez autorisés à conserver durant l’examen</li>
@@ -111,7 +108,6 @@
                 <li>les annulations</li>
                 <li>Les dispositifs mis en place le jour du test</li>
             </ul>
-            </p>
             <p class="lead section-lead">Description du test :</p>
             <p class="section-paragraph">Nantes, Lyon, et Marseille : L’épreuve orale a lieu le samedi après-midi après
                 les écrits.<br/>
@@ -134,6 +130,7 @@
                 Road to IELTS est le cours de préparation en ligne du British Council qui connaît le plus de succès. Il
                 offre la meilleure préparation possible à l’IELTS.<br/>
                 Vous trouverez dans ce cours :<br/>
+            </p>
             <ul>
                 <li>Des outils pour vous préparer aux deux types de tests</li>
                 <li>Des sections pour vous préparer aux quatre épreuves du test : compréhension orale, compréhension
@@ -144,7 +141,6 @@
                 <li>Une section ‘My Progress’ pour comparer votre niveau</li>
                 <li>Une section ‘My Profile’ pour ne pas oublier votre date de passage</li>
             </ul>
-            </p>
             <p class="lead section-lead">Road to IELTS</p>
             <p class="section-paragraph">
                 Entrainement basé sur les épreuves réelles de l’IELTS qui vous donne la possibilité de :<br/>
@@ -167,7 +163,7 @@
             <p class="section-paragraph">
                 Se déroulant à Paris et à Lyon, le but est de passr une journée pour se familiariser avec le test, le
                 format, les épreuves et le type de question. Il vous permettra également de développer les compétences
-                nécessaires pour réussir l’IELTS.<br/>
+                nécessaires pour réussir l’IELTS.<br/></p>
 
                 Vous aborderez les sujets suivants :<br/>
             <ul>
@@ -177,10 +173,9 @@
                 <li>techniques d’expression orale et exercices pratiques.</li>
             </ul>
 
-            Nous vous conseillons de participer à ce cours environ un mois avant de passer le test, afin de vous laisser
+            <p class="section-paragraph">Nous vous conseillons de participer à ce cours environ un mois avant de passer le test, afin de vous laisser
             le temps d’étudier et de refaire les exercices du cours.<br/>
-            Vous retrouverez les dates de l'atelier à l'adresse suivante :<a
-                href="https://www.britishcouncil.fr/examen/ielts/preparation/ateliers">britishcouncil.fr/ielts/preparation</a>
+            Vous retrouverez les dates de l'atelier à l'adresse suivante :<a href="https://www.britishcouncil.fr/examen/ielts/preparation/ateliers">britishcouncil.fr/ielts/preparation</a>
             </p>
 
             <p class="lead section-lead">Quelques conseils pour aborder le test sans stresse</p>
@@ -216,12 +211,12 @@
                 figurera sur votre certificat. Cette procédure est obligatoire. Pour les candidats mineurs, ils devront
                 présenter une permission écrite de leur parent ou de leur tuteur légal.<br/>
 
-                Vous serez autorisé à garder sur vous dans la salle d'examen :<br/>
+                Vous serez autorisé à garder sur vous dans la salle d'examen :<br/></p>
             <ul>
                 <li>Votre pièce d’identité</li>
                 <li>Une bouteille d’eau (sans étiquette)</li>
             </ul>
-            Aucun autre objet ne sera toléré dans la salle, stylo et crayon fourni.<br/>
+            <p class="section-paragraph">Aucun autre objet ne sera toléré dans la salle, stylo et crayon fourni.<br/>
 
             Des vestiaires fermés à clé vous seront fournis pour mettre les affaires que vous avez amenées. Nous vous
             conseillons de ne rien prendre de valeur avec vous car le British Council ne se tiendra pas responsable de
@@ -261,9 +256,7 @@
                 accès aux écoles supérieures les plus connues et les plus demandées et savoir quels tests vous seront
                 demandés pour les intégrer.
             </p>
-            </p>
         </div>
-    </div>
     </div>
 </section>
 <!-- Footer -->
