--- a/pages/PEARSON.html
+++ b/pages/PEARSON.html
@@ -17,13 +17,6 @@
     <!-- Custom CSS -->
     <link href="../css/full-width-pics.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -60,8 +53,10 @@
                     <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests
-                        acceptés par les écoles</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
+                </li>
+                <li>
+                    <a id='Sources' href='Sources.html' title='Sources'>Les Sources</a>
                 </li>
             </ul>
         </div>
@@ -73,7 +68,8 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <h1 class="titre-site">Le guide des tests d'Anglais</h1>
+    <h1 class="titre-site">Le guide des grands tests d'Anglais</h1>
+    <h2 class="soustitre-site">Pour vos études à l'étranger</h2>
 </header>
 
 <!-- Content Section -->
@@ -117,7 +113,7 @@
                 </p>
                 <p class="lead section-lead">Score :</p>
                 <p class="section-paragraph">La partie écrite du test est noté sur 75 et la partie oral sur 25.
-                <table>
+                <table class="table">
                     <tr>
                         <td>Partie</td>
                         <td> Compétence</td>
