--- a/pages/TestParEcole.html
+++ b/pages/TestParEcole.html
@@ -17,13 +17,6 @@
     <!-- Custom CSS -->
     <link href="../css/full-width-pics.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -61,6 +54,9 @@
                 <li>
                     <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
                 </li>
+                <li>
+                    <a id='Sources' href='Sources.html' title='Sources'>Les Sources</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -71,7 +67,8 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <h1 class="titre-site">Le guide des tests d'Anglais</h1>
+    <h1 class="titre-site">Le guide des grands tests d'Anglais</h1>
+    <h2 class="soustitre-site">Pour vos études à l'étranger</h2>
 </header>
 
 <!-- Content Section -->
@@ -80,7 +77,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1>Angleterre</h1>
-                <table align="center">
+                <table align="center" class="table">
                     <tr>
                         <td></td>                          <td>TOEFL</td>  <td>IELTS</td>  <td>PEARSON</td>    <td>Cambridge</td>
                     </tr>
@@ -88,7 +85,7 @@
                         <th>Anglia Ruskin University</th>   <td>X</td>      <td>4.5</td>    <td>X</td>           <td>X</td>
                     </tr>
                     <tr>
-                        <th>University of the Arts London</th>  <td>X</td>  <td>entre 5 et 7 selon les cours demandés</td>    <td>X</td>           <td>X</td>
+                        <th>University of the Arts London</th> <td>X</td> <td>entre 5 et 7 selon les cours demandés</td> <td>X</td> <td>X</td>
                     </tr>
                     <tr>
                         <th>Université Aston</th>           <td>100</td>    <td>5</td>      <td>X</td>           <td>X</td>
@@ -314,7 +311,7 @@
                     </tr>
                 </table>
                 <h1>Ecosse</h1>
-                <table align="center">
+                <table align="center" class="table">
                     <tr>
                         <td></td>                       <td>TOEFL</td>  <td>IELTS</td>  <td>PEARSON</td>    <td>Cambridge</td>
                     </tr>
@@ -350,7 +347,7 @@
                     </tr>
                 </table>
                 <h1>Irlande du Nord</h1>
-                <table align="center">
+                <table align="center" class="table">
                     <tr>
                         <td></td>                       <td>TOEFL</td>  <td>IELTS</td>  <td>PEARSON</td>    <td>Cambridge</td>
                     </tr>
@@ -362,7 +359,7 @@
                     </tr>
                 </table>
                 <h1>Irlande du Nord</h1>
-                <table align="center">
+                <table align="center" class="table">
                     <tr>
                         <td></td>                       <td>TOEFL</td>  <td>IELTS</td>  <td>PEARSON</td>    <td>Cambridge</td>
                     </tr>
