--- a/pages/Cambridge.html
+++ b/pages/Cambridge.html
@@ -17,13 +17,6 @@
     <!-- Custom CSS -->
     <link href="../css/full-width-pics.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 
 <body>
@@ -60,8 +53,10 @@
                     <a id='Cambridge' href='Cambridge.html' title='Présentation du Cambridge'>Le test de Cambridge</a>
                 </li>
                 <li>
-                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests
-                        acceptés par les écoles</a>
+                    <a id='TestParEcole' href='TestParEcole.html' title='Les tests acceptés par les écoles'>Les tests acceptés par les écoles</a>
+                </li>
+                <li>
+                    <a id='Sources' href='Sources.html' title='Sources'>Les Sources</a>
                 </li>
             </ul>
         </div>
@@ -73,7 +68,8 @@
 <!-- Full Width Image Header with Logo -->
 <!-- Image backgrounds are set within the full-width-pics.css file. -->
 <header class="image-bg-fluid-height">
-    <h1 class="titre-site">Le guide des tests d'Anglais</h1>
+    <h1 class="titre-site">Le guide des grands tests d'Anglais</h1>
+    <h2 class="soustitre-site">Pour vos études à l'étranger</h2>
 </header>
 
 <!-- Content Section -->
@@ -151,9 +147,11 @@
                         <td>A</td>
                         <td>C2</td>
                     </tr>
-                    <td>193-199</td>
-                    <td>B</td>
-                    <td>C1</td>
+                    <tr>
+                        <td>193-199</td>
+                        <td>B</td>
+                        <td>C1</td>
+                    </tr>
                     <tr>
                         <td>180-198</td>
                         <td>C</td>
@@ -165,13 +163,10 @@
                         <td>B2</td>
                     </tr>
                 </table>
-                <p>
+                <p class="section-paragraph">
                     Les scores inférieurs à 142 ne sont pas reportés, et les scores entre 142-159 sont reportés mais ne
                     bénéficient pas du certificat !
                 </p>
-                </p>
-
-                <p class="section-paragraph"></p>
 
                 <h1 class="section-heading">Pour vous préparer</h1>
                 <p class="lead section-paragraph">
@@ -192,7 +187,7 @@
 
                 <p class="lead section-lead">Quelques liens utiles</p>
                 <p class="lead sectio-paragraph">
-                    <a href="www.cambridgeenglish.org/fr/images/181151-cae-information-for-candidates-2015-document.pdf">Lien
+                    <a href="http://www.cambridgeenglish.org/fr/images/181151-cae-information-for-candidates-2015-document.pdf">Lien
                         de la brochure du CAE </a> (En anglais)
                 </p>
             </div>
